# backend/app/api/v1/router.py
@@ -4,6 +4,7 @@ from app.api.v1.endpoints import (
     auth,
     meeting_participants,
     meetings,
+    recordings,
     team_members,
     teams,
     webrtc,
@@ -18,3 +19,4 @@ api_router.include_router(meetings.team_meetings_router)
 api_router.include_router(meetings.router)
 api_router.include_router(meeting_participants.router)
 api_router.include_router(webrtc.router)
+api_router.include_router(recordings.router)
